# Tasks_management_app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_superuser.py  data.json  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: docker-image.yml  migrations.yml
static/css/: dashboard.css  landing_page.css  login.css
static/js/: dashboard.js
tasks/: api.py  forms.py  models.py  schema.py  schemas.py  urls.py  views.py
tasks/data/: mock_data.csv
tasks/management/commands/: import_tasks.py
tasks/migrations/: 0001_initial.py  0002_alter_task_task.py  0003_alter_task_priority.py  0004_mock_data.py
tasks/static/tasks/css/: tasks.css
tasks/static/tasks/js/: add_task.js
tasks/templates/tasks/: task_page.html
templates/: dashboard_page.html  landing_page.html
templates/registration/: login.html
wellence_project/: asgi.py  reports.py  settings.py  urls.py  views.py  wsgi.py
