[tool.poetry]
name = "tasks-management-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-ninja = "^1.3.0"
requests = "^2.32.3"
daphne = "^4.1.2"
django-cors-headers = "^4.4.0"
whitenoise = "^6.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
